--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 [Bb]uilds/
 [Ll]ogs/
 [Bb]uild*
+results/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
