Acrobotの学習結果を追加

--- a/Configs/Basic_ppo_acrobot.yaml
+++ b/Configs/Basic_ppo_acrobot.yaml
@@ -9,14 +9,16 @@ behaviors:
       learning_rate: 1e-4
     network_settings:
       normalize: true
-      hidden_units: 256
-      num_layers: 2
+      hidden_units: 512
+      num_layers: 3
     reward_signals:
       extrinsic:
         gamma: 0.99
         strength: 1.0
+      curiosity:
+        strength: 0.1
     keep_checkpoints: 50
     threaded: true
     summary_freq: 30000
-    max_steps: 1e7
+    max_steps: 1e8
     time_horizon: 64
